manifests/monitoring/kgateway/allow-syslog-route-to-loki.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-syslog-route-to-loki
  namespace: monitoring
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: kgateway-system
  to:
    - group: ""
      kind: Service
