manifests/monitoring/kgateway/tcp-syslog-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-syslog-route
  namespace: monitoring
  labels:
    app: syslog
spec:
  parentRefs:
    - name: syslog-gateway
      namespace: kgateway-system
      sectionName: tcp-syslog
  rules:
    - backendRefs:
        - name: loki-promtail-syslog-tcp
          namespace: monitoring
          port: 1514
